--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "pdf.js",
   "devDependencies": {
     "@babel/core": "^7.22.9",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "@babel/plugin-transform-modules-commonjs": "^7.22.5",
     "@babel/preset-env": "^7.22.9",
     "@babel/runtime": "^7.22.6",
